--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "gh-pages": "^5.0.0",
     "react-icons": "^4.8.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
